getting warmer on testing

--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ deps =
 commands =
     python --version
     tests: pytest {posargs:tests}
-    ; docs: sphinx-build -b html -d {envtmpdir}/doctrees docs {envtmpdir}/html
+    docs: sphinx-build -b html -d {envtmpdir}/doctrees docs {envtmpdir}/html
 
 [testenv:readme-py27]
 commands = python setup.py check -r -s
