--- a/tox.ini
+++ b/tox.ini
@@ -3,16 +3,15 @@ skipsdist = True
 usedevelop = True
 minversion = 1.8
 envlist =
-    flake8-py27,
-    flake8-py35,
+    flake8-py36,
     readme-py27,
-    docs-py27-dj{18,19,110},
-    tests-py{27,34,35,36,py}-dj{18,19,110,111}
+    docs-py27-dj{18,110},
+    tests-py{27,35,36,py}-dj{18,110,111}
+skip_missing_interpreters = True
 
 [testenv]
 basepython =
     py27: python2.7
-    py34: python3.4
     py35: python3.5
     py36: python3.6
     pypy: pypy
@@ -36,13 +35,10 @@ commands =
 commands = python setup.py check -r -s
 deps = readme_renderer
 
-[testenv:flake8-py27]
-commands = flake8 src/cache_memoize.py
-deps = flake8
-
-[testenv:flake8-py35]
-commands = flake8 src/cache_memoize.py
-deps = flake8
+[testenv:flake8-py36]
+commands = flake8 src tests
+deps =
+    flake8
 
 [flake8]
 exclude=.tox
