tox tests don't test with Django 2.
Fixes #12

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,9 @@ envlist =
     flake8-py36,
     readme-py27,
     docs-py27-dj{18,110},
-    tests-py{27,35,36,py}-dj{18,110,111}
+    py27-django{18,19,110,111},
+    py35-django{18,19,110,111,20,21},
+    py36-django{18,19,110,111,20,21},
 skip_missing_interpreters = True
 
 [testenv]
@@ -21,10 +23,12 @@ setenv =
     PYTHONPATH = {toxinidir}
 deps =
     -rtests/requirements.txt
-    dj18: Django<1.9
-    dj19: Django<1.10
-    dj110: Django<1.11
-    dj111: Django<1.12
+    django18: Django >=1.8, <1.9
+    django19: Django >=1.9, <1.10
+    django110: Django >=1.10, <1.11
+    django111: Django >=1.11, <2.0
+    django20: Django>=2.0,<2.1
+    django21: Django>=2.1
     docs: sphinx
 commands =
     python --version
