--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ skipsdist = True
 usedevelop = True
 minversion = 1.8
 envlist =
-    flake8-py36,
+    lint-py36,
     readme-py27,
     docs-py27-dj{18,110},
     py27-django{18,19,110,111},
@@ -39,11 +39,6 @@ commands =
 commands = python setup.py check -r -s
 deps = readme_renderer
 
-[testenv:flake8-py36]
-commands = flake8 src tests
-deps =
-    flake8
-
-[flake8]
-exclude=.tox
-#ignore=E501,E127,E128,E124
+[testenv:lint-py36]
+extras = dev
+commands=therapist run --use-tracked-files
