tox runs no tests
Fixes #22

--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,8 @@ usedevelop = True
 minversion = 1.8
 envlist =
     lint-py36,
-    readme-py27,
-    docs-py27-dj{18,110},
+    readme-py36,
+    docs-py36,
     py27-django{18,19,110,111},
     py35-django{18,19,110,111,20,21},
     py36-django{18,19,110,111,20,21},
@@ -29,15 +29,22 @@ deps =
     django111: Django >=1.11, <2.0
     django20: Django>=2.0,<2.1
     django21: Django>=2.1
-    docs: sphinx
 commands =
-    python --version
-    tests: pytest {posargs:tests}
+    pytest {posargs:tests}
+
+[testenv:docs-py36]
+deps =
+    sphinx
+commands =
     docs: sphinx-build -b html -d {envtmpdir}/doctrees docs {envtmpdir}/html
 
-[testenv:readme-py27]
-commands = python setup.py check -r -s
-deps = readme_renderer
+[testenv:readme-py36]
+deps =
+    twine
+    readme_renderer[md]
+commands =
+    python setup.py sdist
+    twine check dist/*
 
 [testenv:lint-py36]
 extras = dev
