mention pypy too

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ envlist =
     py27-django{18,19,110,111},
     py35-django{18,19,110,111,20,21},
     py36-django{18,19,110,111,20,21},
+    pypy-django{18,19,110,111,20,21},
 skip_missing_interpreters = True
 
 [testenv]
