--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,15 @@ sudo: false
 language: python
 branches:
   only:
-  - master
+    - master
 python:
-- '2.7'
-- '3.5'
-- '3.6'
-- pypy
+  - "2.7"
+  - "3.5"
+  - "3.6"
+  - "pypy3.5"
 cache: pip
 install:
-- pip install tox-travis
+  - pip install tox-travis
 script: tox -v
 after_success:
-- bash <(curl -s https://codecov.io/bash)
+  - bash <(curl -s https://codecov.io/bash)
