be more specific about pypy version

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ basepython =
     py27: python2.7
     py35: python3.5
     py36: python3.6
-    pypy: pypy
+    pypy: pypy3.5
 usedevelop = true
 setenv =
     DJANGO_SETTINGS_MODULE = tests.settings
