be even more explicit about pypy version

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ envlist =
     py27-django{18,19,110,111},
     py35-django{18,19,110,111,20,21},
     py36-django{18,19,110,111,20,21},
-    pypy-django{18,19,110,111,20,21},
+    pypy35-django{18,19,110,111,20,21},
 skip_missing_interpreters = True
 
 [testenv]
@@ -17,7 +17,7 @@ basepython =
     py27: python2.7
     py35: python3.5
     py36: python3.6
-    pypy: pypy3.5
+    pypy35: pypy3.5
 usedevelop = true
 setenv =
     DJANGO_SETTINGS_MODULE = tests.settings
