--- a/tox.ini
+++ b/tox.ini
@@ -8,12 +8,14 @@ envlist =
     docs-py36,
     py35-django{18,19,110,111,20,21},
     py36-django{18,19,110,111,20,21},
+    py37-django{18,19,110,111,20,21},
     pypy3-django{18,19,110,111,20,21},
 
 [testenv]
 basepython =
     py35: python3.5
     py36: python3.6
+    py37: python3.7
     pypy3: pypy3
 usedevelop = true
 setenv =
