--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
-sudo: false
 language: python
-branches:
-  only:
-    - master
-python:
-  - "2.7"
-  - "3.5"
-  - "3.6"
-  - pypy3
+matrix:
+  include:
+    - python: "3.5"
+    - python: "3.6"
+    - python: "3.7"
+      dist: xenial
+    - python: pypy3
 cache: pip
 install:
   - pip install tox-travis
