--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ envlist =
     py38-django{22,30},
     pypy3-django{111,20,21,22},
 
-[testenv]
+[gh-actions]
 basepython =
     py35: python3.5
     py36: python3.6
