--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,4 @@
 [tox]
-skipsdist = True
-usedevelop = True
-minversion = 1.8
 envlist =
     lint-py36,
     readme-py36,
@@ -13,12 +10,14 @@ envlist =
     pypy3-django{111,20,21,22},
 
 [gh-actions]
-basepython =
-    py35: python3.5
-    py36: python3.6
-    py37: python3.7
-    py38: python3.8
-    pypy3: pypy3
+python =
+  3.5: py35
+  3.6: py36
+  3.7: py37
+  3.8: py38, lint, restlint
+  pypy3: pypy3
+
+[testenv]
 usedevelop = true
 setenv =
     DJANGO_SETTINGS_MODULE = tests.settings
