Use Python3.9 for docs and linting.

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,13 @@
 [tox]
 envlist =
-    lint-py36,
-    readme-py36,
-    docs-py36,
+    lint-py39,
+    readme-py39,
+    docs-py39,
     py35-django{22},
     py36-django{22,31},
     py37-django{22,31},
     py38-django{22,31},
+    py39-django{22,31},
     pypy3-django{22,31},
 
 [gh-actions]
@@ -14,7 +15,8 @@ python =
   3.5: py35
   3.6: py36
   3.7: py37
-  3.8: py38, lint, restlint
+  3.8: py38
+  3.9: py39, lint, restlint
   pypy3: pypy3
 
 [testenv]
@@ -29,13 +31,13 @@ deps =
 commands =
     pytest {posargs:tests}
 
-[testenv:docs-py36]
+[testenv:docs-py39]
 deps =
     sphinx
 commands =
     docs: sphinx-build -b html -d {envtmpdir}/doctrees docs {envtmpdir}/html
 
-[testenv:readme-py36]
+[testenv:readme-py39]
 deps =
     twine
     readme_renderer[md]
@@ -43,6 +45,6 @@ commands =
     python setup.py sdist
     twine check dist/*
 
-[testenv:lint-py36]
+[testenv:lint-py39]
 extras = dev
 commands=therapist run --use-tracked-files
