--- a/tox.ini
+++ b/tox.ini
@@ -4,11 +4,11 @@ envlist =
     readme-py39,
     docs-py39,
     py35-django{22},
-    py36-django{22,31},
-    py37-django{22,31},
-    py38-django{22,31},
-    py39-django{22,31},
-    pypy3-django{22,31},
+    py36-django{22,31,32},
+    py37-django{22,31,32},
+    py38-django{22,31,32},
+    py39-django{22,31,32},
+    pypy3-django{22,31,32},
 
 [gh-actions]
 python =
@@ -28,6 +28,7 @@ deps =
     -rtests/requirements.txt
     django22: Django>=2.2,<3
     django31: Django>=3.1,<3.2
+    django32: Django>=3.2,<4.0
 commands =
     pytest {posargs:tests}
 
