--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,8 @@ envlist =
     py35-django{22},
     py36-django{22,31,32},
     py37-django{22,31,32},
-    py38-django{22,31,32},
-    py39-django{22,31,32},
+    py38-django{22,31,32,40},
+    py39-django{22,31,32,40},
     pypy3-django{22,31,32},
 
 [gh-actions]
@@ -29,6 +29,7 @@ deps =
     django22: Django>=2.2,<3
     django31: Django>=3.1,<3.2
     django32: Django>=3.2,<4.0
+    django40: Django>=4.0,<4.1
 commands =
     pytest {posargs:tests}
 
