tox.ini: py310,311

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,15 @@
 [tox]
 envlist =
-    lint-py39,
-    readme-py39,
-    docs-py39,
+    lint-py310,
+    readme-py310,
+    docs-py310,
     py35-django{22},
     py36-django{22,31,32},
     py37-django{22,31,32},
     py38-django{22,31,32,40},
     py39-django{22,31,32,40},
+    py310-django{22,31,32,40},
+    py311-django{22,31,32,40},
     pypy3-django{22,31,32},
 
 [gh-actions]
@@ -16,8 +18,10 @@ python =
   3.6: py36
   3.7: py37
   3.8: py38
-  3.9: py39, lint, restlint
-  pypy3: pypy3
+  3.9: py39
+  3.10: py310, lint, restlint
+  3.11: py311
+  pypy3.9: pypy3
 
 [testenv]
 usedevelop = true
@@ -33,13 +37,13 @@ deps =
 commands =
     pytest {posargs:tests}
 
-[testenv:docs-py39]
+[testenv:docs-py310]
 deps =
     sphinx
 commands =
     docs: sphinx-build -b html -d {envtmpdir}/doctrees docs {envtmpdir}/html
 
-[testenv:readme-py39]
+[testenv:readme-py310]
 deps =
     twine
     readme_renderer[md]
@@ -47,6 +51,6 @@ commands =
     python setup.py sdist
     twine check dist/*
 
-[testenv:lint-py39]
+[testenv:lint-py310]
 extras = dev
 commands=therapist run --use-tracked-files
