use 3.11 for therapist

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -3,7 +3,15 @@
 
 name: Python
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+
+# Drop permissions to minimum for security
+permissions:
+  contents: read
 
 jobs:
   build:
