--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,10 @@ envlist =
     readme-py311,
     docs-py311,
     py39-django{32,41,42},
-    py310-django{32,41,42},
-    py311-django{41,42},
-    py312-django{41,42},
+    py310-django{32,41,42,50,51,52},
+    py311-django{41,42,50,51,52},
+    py312-django{41,42,50,51,52},
+    py313-django{51,52},
 
 [gh-actions]
 python =
@@ -14,6 +15,7 @@ python =
     3.10: py310
     3.11: py311, lint, restlint
     3.12: py312
+    3.13: py313
 
 [testenv]
 usedevelop = true
@@ -25,6 +27,9 @@ deps =
     django32: Django>=3.2,<4.0
     django41: Django>=4.1,<4.2
     django42: Django>=4.2,<4.3
+    django50: Django>=5.0,<5.1
+    django51: Django>=5.1,<5.2
+    django52: Django>=5.2,<6.0
 commands =
     pytest {posargs:tests}
 
